# BomberMan

./: CMakeLists.txt  Camera.cpp  Camera.h  Graphics.cpp  Graphics.h  Map.cpp  Menu.cpp  Mesh.cpp  Mesh.h  README.md  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  bomberman  gfx.cpp  gfx.h  header.h  main.cpp  run.txt
abstracts/: Bot.cpp  Object.cpp  Object_movable.cpp  Time.cpp
abstracts/includes/: Bot.hpp  Object.hpp  Object_movable.hpp  Time.hpp
back/: Game_loop.cpp  Map.cpp
back/abstracts/: Bot.cpp  Object.cpp  Object_movable.cpp
back/abstracts/includes/: Bot.hpp  Object.hpp
back/factories/: Factory.cpp
back/factories/includes/: Factory.hpp
back/includes/: Map.hpp
back/objects/: Bomberman.cpp  Squid.cpp
back/objects/includes/: Bomberman.hpp  Squid.hpp
factories/: Factory.cpp
factories/includes/: Factory.hpp  Object_factory.hpp
includes/: AnimatedModel.h  Engine.h  Graphics.h  Joints.h  Map.hpp  Menu.hpp  Mesh.h  Object.h  Shader.h  Texture.h  graphicsMain.h  stb_image.h  stdMain.h
includes/engine/: Camera.h  Engine.h  Graphics.h
includes/general/: graphicsMain.h  stdMain.h
includes/object animation/: AnimatedModel.h  Animation.h  Animator.h  Joint.h  JointTransform.h  KeyFrame.h
includes/object manipulation/: Mesh.h  Object.h  Shader.h  Texture.h
maps/: map.map  map1.map
objects/: Bomb.cpp  Bomberman.cpp  Empty.cpp  Fire.cpp  Soft_wall.cpp  Squid.cpp
objects/includes/: Bomb.hpp  Bomberman.hpp  Empty.hpp  Fire.hpp  Soft_wall.hpp  Squid.hpp
observers/: Object_subject.cpp  Subject.cpp
observers/includes/: Object_subject.hpp  Observer.hpp  Subject.hpp
resources/: basicShader.fs  basicShader.vs
resources/maps/: 5  level_1.map
resources/shaders/walls/: bman.fs  bot.fs  bwall.fs  wall.fs  wall.vs
sources/: AnimatedModel.cpp  Camera.cpp  Engine.cpp  Graphics.cpp  Joints.cpp  Mesh.cpp  Object.cpp  Shader.cpp  Texture.cpp  Transform.cpp  obj_loader.cpp  stb_image.c
sources/engine/: Camera.cpp  Engine.cpp  Graphics.cpp
sources/object animation/: AnimatedModel.cpp  Animation.cpp  Animator.cpp  Joint.cpp  JointTransform.cpp  KeyFrame.cpp
sources/object loading/: obj_loader.cpp  stb_image.c
sources/object manipulation/: Mesh.cpp  Object.cpp  Shader.cpp  Texture.cpp  Transform.cpp
